--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "handlebars": "^4.7.7",
     "nestjs-prisma": "^0.20.0",
     "nodemailer": "^6.9.2",
