--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.341.0",
     "@nest-modules/mailer": "^1.3.22",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
@@ -28,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "4.14.1",
     "@types/cookie-parser": "^1.4.3",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.8",
     "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
@@ -35,6 +37,7 @@
     "dotenv": "^16.0.3",
     "handlebars": "^4.7.7",
     "nestjs-prisma": "^0.20.0",
+    "nestjs-s3": "^2.0.1",
     "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
