--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   minio:
-    image: minio/minio:latest
+    image: docker.io/bitnami/minio:latest
     restart: always
     networks:
       - backend
@@ -33,6 +33,8 @@ services:
       MINIO_URL: http://minio:9000
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: minio
+      SMTP_KEY: SMTP_KEY
+      JWT_SECRET: adflj13!@#nwejfnsdk!JO#B1fndeokfn!@#dkkfgnsfknern!@#sdlkfns
 
   db:
     image: postgres:latest
