--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,10 @@ services:
     restart: always
     environment:
       REDIS_HOST: redis
-      DATABASE_URL: postgres://backend:AndroidR123@db:5432/root?schema=neko
+      DATABASE_URL: postgres://backend:asdzcvqadsa@db:5432/root?schema=panel
       MINIO_URL: http://minio:9000
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: minio
-      SMTP_KEY: SMTP_KEY
       JWT_SECRET: adflj13!@#nwejfnsdk!JO#B1fndeokfn!@#dkkfgnsfknern!@#sdlkfns
 
   db:
@@ -44,7 +43,7 @@ services:
     environment:
       POSTGRES_DB: root
       POSTGRES_USER: backend
-      POSTGRES_PASSWORD: AndroidR123
+      POSTGRES_PASSWORD: asdzcvqadsa
     ports:
       - '5432:5432'
     volumes:
